Closed
Bug 1606776
Opened 3 years ago
Closed 3 years ago
[Wayland] Restoring window from maximized state leaves black box artifacts around window
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla73
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox71 | --- | unaffected |
firefox72 | --- | unaffected |
firefox73 | --- | fixed |
People
(Reporter: ke5trel, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
STR:
- Run with
MOZ_ENABLE_WAYLAND=true
on Ubuntu 19.10. - Maximize window.
- Restore window.
Black boxes are drawn around the window and remain until the window is adjusted.
Happens with Basic, OpenGL and WebRender compositors.
Regression range:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5bd709eb6bd1b084779922c508df2ec9ad98eebc&tochange=c96194fe9f07a39d4d681b392d0bb7bb778ecf41
Regressed by Bug 1605120.
Assignee | ||
Comment 1•3 years ago
|
||
I see, it's caused by wrong opaque region offset. I'll look at it.
Assignee | ||
Updated•3 years ago
|
Assignee: nobody → stransky
Priority: -- → P3
Assignee | ||
Comment 2•3 years ago
|
||
Pushed by dvarga@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c578b45d1116 [Wayland] Commit opaque region change to mShell wl_surface r=jhorak
Comment 4•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Updated•3 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•