Bug 1606776 [Wayland] Commit opaque region change to mShell wl_surface r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D58597